# Void-Vault

./: COMMERCIAL-LICENSE.md  Cargo.toml  PRIVACY.md  README.md  install.bat  install.ps1  install.sh
browser-extension/: README.md  manifest.json  popup.html  setup.html  styles.css
browser-extension/icons/: create_icons.sh
browser-extension/native-host/: com.starwell.void_vault.json
browser-extension/scripts/: background.js  content.js  domain-shift.js  normalizer.js  popup.js  setup.js
src/: main.rs
